<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KTC电视智能遥控</string>
    <string name="action_settings">Settings</string>
    
    <!-- slide menu -->
    <string name="str_slidemenu_splash">开屏画报</string>
    <string name="str_slidemenu_filemanager">文件管理</string>
    <string name="str_slidemenu_appmanager">应用管理</string>
    <string name="str_slidemenu_media">多媒体</string>
    <string name="str_slidemenu_screen">截屏</string>
    <string name="str_slidemenu_laboratory">实验室</string>
    <string name="str_slidemenu_feedback">用户反馈</string>
    <string name="str_slidemenu_about">关于</string>
    <string name="str_slidemenu_setting">设置</string>
    
    
    <!-- key normal -->
    <string name="str_key_shutdown">关机</string>
    <string name="str_key_input">输入源</string>
    <string name="str_key_mute">静音</string>
    <string name="str_key_add">+</string>
    <string name="str_key_reduce">-</string>
    <string name="str_key_menu">菜单</string>
    <string name="str_key_enter">确定</string>
    <string name="str_key_back">返回</string>
    <string name="str_key_home">主页</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="description">background image</string>
    <string name="channel">Chn</string>
    <string name="volume">Vol</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>

    <string name="select_device_name">Choose device name</string>
    <string name="controller_title_name">Not connected</string>
    <string name="appmanage_item_appname">soniq</string>
    <string name="appmanage_item_version">soniq</string>
    <string name="appmanage_get_data_failed">Fail to obtain</string>
    <string name="appmanage_title">Apps</string>
    <string name="appmanage_delete_forbid">forbid</string>
    <string name="emarket_title">Market</string>
    <string name="layout_mouse_confirm">Ok</string>
    <string name="layout_mouse_menu">Menu</string>
    <string name="layout_mouse_return">Exit</string>
    <string name="layout_controller_search">Search</string>
    <string name="search_title">Device</string>
    <string name="mouse_title">Mouse</string>
    <string name="search_item_name">No name</string>
    <string name="bind_devices_pop_cancel">Cancel</string>
    <string name="popup_item_open">Open</string>
    <string name="popup_item_uninstall">Uninstall</string>
    <string name="popup_item_cancel">Cancel</string>
    <string name="version">Version</string>
    
    <string name="emarket_item_appname">soniq</string>
    <string name="emarket_item_version">soniq</string>
    <string name="emarket_item_installbtn">Install to TV</string>
    
    <string name="market_get_bind_list_failed">Fail to obtain</string>
    <string name="market_bind_failed">Failure</string>
    <string name="market_addtask_failed">Failure</string>
    <string name="market_get_list_failed">Failure</string>
    <string name="market_bind_success">Successfully</string>
    <string name="market_addtask_success">Successfully</string>
    <string name="market_tips_not_bind_any">Binding current device?</string>
    <string name="market_tips_not_bind">Please connect your device.</string>
    <string name="market_tips_not_bind_current">Binding current device?</string>
    <string name="market_btn_cancel">Cancel</string>
    <string name="market_btn_bind">Bind</string>
    <string name="market_tips_get_info">Loading...</string>
    <string name="market_tips_binding">Binding...</string>
    <string name="market_tips_submit">Submit...</string>
    
    
    <string name="title_select_device">Choose Device</string>
    <string name="list_device_name">Living room,Bedroom,Subaltern room,Study,TV1,TV2,TV3,TV4,TV5</string>
    
    
    <string name="setting">Setting</string>
        
    <string name="username">Username</string>
    <string name="userpwd">Password</string>
    
    <string name="userregister">Register</string>
    <string name="userregistertitle">Register</string>
    <string name="userregisterbtn">Register</string>
    
    <string name="userlogin">Login</string>
    <string name="userlogintitle">Login</string>
    <string name="userloginbtn">Login</string>
    
    <string name="changepwd">Change Password</string>
    <string name="changepwdbtn">Change</string>
    <string name="oldpwd">original password</string>
    <string name="newpwd">new password</string>
    
    <string name="mybinddevices">My Device</string>

    <string name="bind_devices_pop_unbundling">Unbind</string>
    <string name="download_pop_undownload">Delete</string>
    <string name="pop_menu_cancel">Cancel</string>
    
	<string name="downloadtasklisttitle">Download Task</string>
	<string name="waitting_for_download">Waiting for download</string>

    <string name="set_about_title">About</string>
	<string name="set_soft_name">Soniq Mobile Remote Control</string>
	<string name="set_soft_version_name">Version:1.0</string>
	<string name="set_soft_version">Version</string>
	
	<string name="http_data_error">Data Error</string>
	<string name="upgrade_tips1">New version</string>
	<string name="upgrade_tips2"> has been found!</string>
	
	<string name="tips_title">Message</string>
	<string name="tips_ok">OK</string>
	<string name="tips_cancel">Cancel</string>
	
	<string name="downloading">Downloading</string>

	<string name="task_status_no_download">Watting for download</string>
	<string name="task_status_downloading">Downloading</string>
	<string name="task_status_download_success">Download Successed</string>
	<string name="task_status_download_failed">Download Failed</string>
	<string name="task_status_install_success">Install Successed</string>
	<string name="task_status_install_failed">Install Failed</string>
	<string name="task_status_unknow">Unknow</string>
	
	<string name="title_setting">Setting</string>
	<string name="setting_section_user">User</string>
	<string name="setting_menu_user_not_login">User: Not login, click to login</string>
	<string name="setting_menu_user_logined">User</string>
	<string name="setting_menu_register">Register</string>
	<string name="setting_menu_bind_device">Bind the current device</string>
	<string name="setting_menu_my_bind_list">My device</string>
	<string name="setting_menu_my_task_list">My download</string>
	<string name="setting_menu_logout">Logout</string>
	<string name="task_status_download_device">Device</string>
	
	<string name="setting_section_general">General</string>
	<string name="setting_menu_clear_cache">Clear cache</string>
	<string name="setting_menu_version">Version</string>
	<string name="setting_menu_check_version">Check for updates</string>
	<string name="setting_menu_about">About</string>
	
	<string name="setting_tips_not_connect">Please connect the device!</string>
	
	<string name="setting_tips_checkversion">Checking for updates...</string>
	<string name="setting_tips_already_new_version">Already the latest version!</string>
	<string name="setting_tips_clear_cache_ok">Done!</string>

	<string name="setting_please_connect_network">Please check network configuration</string>
	
	<string name="login_title">Login</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_btn_login">Login</string>
	<string name="login_btn_register">Register</string>
	<string name="register_title">Register</string>
	<string name="login_input_name">Input name(4 characters at least)!</string>
	<string name="login_input_pwd">Input password(4 characters at least)!</string>
	<string name="login_logging">Logging...</string>
	<string name="login_login_failed">Failure</string>
	<string name="login_login_success">Successfully!</string>
	<string name="login_registering">Registering...</string>
	<string name="login_register_failed">failure registration</string>
	<string name="login_register_success">Successfully!</string>

	<string name="exit_apllication">Press again to exit the program</string>

	
	<string name="setting_tips_successed">Successfully！</string>
	<string name="setting_tips_failed">Failure！</string>
	
	
	<!-- server -->
    <string name="format_uninstall_ok">%s 已经卸载!</string>
    <string name="format_uninstall_failed">%s 卸载失败!</string>
    <string name="btn_start_service">启动服务</string>
    <string name="btn_stop_service">停止服务</string>
    <string name="status_running">运行中...</string>
    <string name="status_stopped">未启动</string>
    <string name="device_name">设备名称：%s</string>
    <string name="version_info">当前版本：%s</string>
</resources>
